# euclidOrchard

./: LICENSE  README  euclidOrchard.cabal  installDependencies.sh  playMovie.sh  playTest.sh
data/: ending.mpeg  euclid.map
src/: Euclid.hs  HandleFiles.hs  SdlMaze.hs
