Name:                euclidOrchard
Version:             0.1
Synopsis:            Euclid Orchard Maze
Homepage:            http://devrand.org
License:             BSD3
License-file:        LICENSE
Author:              Gavin Black
Stability:           Provisional
Category:            Game
Build-type:          Simple

Cabal-version:       >=1.2
Executable euclidOrchard
  hs-source-dirs: src
  main-is: SdlMaze.hs

  Build-depends:
    base >= 4,
    haskell98,
    SDL,
    SDL-image,
    SDL-mixer,
    MissingH,
    directory,
    strict-io,
    random,
    mtl,
    gd

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
